--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
         <div class="desc">
           <p>
             1st Estimated label: {{predict['class1'][0]}}<BR>
-              The probability: {{predict['class1'][1]}}<BR>
+            　The probability: {{predict['class1'][1]}}<BR><BR>
             2nd Estimated label: {{predict['class2'][0]}}<BR>
-              The probability: {{predict['class2'][1]}}<BR>
+            　The probability: {{predict['class2'][1]}}<BR>
             </p>
           file name: {{predict['name']}}
         </div>
